k8s/04-kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: ecom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: apache/kafka:3.7.2
          ports:
            - name: broker
              containerPort: 9092
            - name: controller
              containerPort: 9093
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - /opt/kafka/bin/kafka-topics.sh --bootstrap-server localhost:9092 --list >/dev/null 2>&1
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 12
          volumeMounts:
            - name: kafka-data
              mountPath: /tmp/kraft-combined-logs
      volumes:
        - name: kafka-data
          persistentVolumeClaim:
            claimName: kafka-data
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: ecom
spec:
  selector:
    app: kafka
  ports:
    - name: broker
      port: 9092
      targetPort: 9092
    - name: controller
      port: 9093
      targetPort: 9093
